--- a/views/index.html
+++ b/views/index.html
@@ -9,5 +9,30 @@
 <body>
     <h1>Hello World</h1>
     <h2>I am ready for you</h2>
+    <form>
+        <label for="">Email</label>
+        <input type="email">
+        <label for="">Name</label>
+        <input type="text">
+        <label for="">Password</label>
+        <input type="password">
+        <button>Signup</button>
+    </form>
+
+<!-- axios post -->
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
+<script>
+    let btn = document.querySelector("button");
+    btn.addEventListener("click", async function(e) {
+        e.preventDefault();
+        let email = document.querySelector("input[type='email']").value;
+        let name = document.querySelector("input[type='text']").value;
+        let password = document.querySelector("input[type='password']").value;
+        let resp = await axios.post("/auth/signup", {email, name, password});
+        console.log(resp);
+    })
+</script>
+
 </body>
 </html>
